# Diablo-IV-Masterwork-Companion

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Requirements.txt  readme.md  v1.1.py
enchant_ocr_backend/: Cargo.toml  README.md  enchant_config.sample.json
enchant_ocr_backend/src/: config.rs  enchant_loop.rs  lib.rs  main.rs  types.rs
enchant_ocr_backend/src/platform/: mod.rs  windows_impl.rs
enchant_ocr_native/: Cargo.toml  README.md  build.rs
enchant_ocr_native/scripts/: make_app_icon.ps1  make_app_icon.py
enchant_ocr_native/src/: main.rs
src/: main.rs
src/backend/: matcher.rs
src/backend/platform/: windows_impl.rs
src/engine/: config.rs  enchant_loop.rs  mod.rs  types.rs
src/engine/platform/: mod.rs
