[package]
name = "enchant_ocr_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
futures-lite = "2.6.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strsim = "0.11.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
windows = { version = "0.62.2", features = ["Media_Ocr", "Graphics_Imaging", "Storage", "Storage_Streams", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
xcap = "0.9.4"
