[package]
name = "enchant_ocr_native"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
eframe = "0.27.2"
enchant_ocr_backend = { path = "../enchant_ocr_backend" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[build-dependencies]
winresource = "0.1.22"
